===================================
Smartline Lite Changelog
===================================

Version 1.1
-----------------------------------
[improved] styling of blockquotes
[updated] to Genericon Font 3.3 and added new twitch and spotify icons

Version 1.0.9
-----------------------------------
[added] setting to Category Posts widgets to link widget title to category archive page
[added] small posts grid layout style to Category Posts Grid widget
[added] number of posts and highlighting first post option to Category Post Columns widget
[added] unminified version of html5shiv.min.js and jquery.flexslider-min.js
[fixed] missing line spaces in paragraph styling of blockquotes

Version 1.0.8
-----------------------------------
[fixed] cache reset bug of Category Posts widgets by changing from transient caching to object caching
[changed] responsive design of header area (center alignment on mobile devices)

Version 1.0.7
-----------------------------------
[added] sane defaults for widget settings
[improved] performance of Category Posts widgets by adding transient caching
[updated] smartline-lite.pot language file

Version 1.0.6
-----------------------------------
[added] theme option to display excerpt more text
[changed] implementation of loading default Google Fonts
[changed] implementation of menu icons for mobile navigation
[fixed] line height bug for pre and code HTML tags
[fixed] missing translations

Version 1.0.5
-----------------------------------
[added] improved way to set sane defaults for theme options
[added] usage of $hook variable to load theme-info.css in admin
[changed] widget titles to be translation-ready
[changed] structure and organization of theme files for the Customizer
[improved] usage of proper sanitization functions for data validation 

Version 1.0.4
-----------------------------------
[fixed] styling of search field for Safari
[added] new customizer panel for theme options
[moved] all theme settings and sections to the new panel
